@@ -9,48 +9,60 @@
 mousetweaks \- Accessibility enhancements for the mouse
 .SH SYNOPSIS
 .B mousetweaks
-[\-e|\-\-enable=STRING] [\-m|\-\-dwell\-mode=STRING]
-[\-c|\-\-show\-ctw] [\-x|\-\-ctw\-x=INT] [\-y|\-\-ctw\-y=INT] [\-s|\-\-shutdown]
-.br
-.B mousetweaks
-[\-?|\-\-help]
+[\-\-enable\-dwell] [\-\-enable\-secondary]
+[\-\-dwell\-time=FLOAT] [\-\-secondary\-time=FLOAT]
+[\-m|\-\-dwell\-mode=STRING] [\-c|\-\-show\-ctw]
+[\-x|\-\-ctw\-x=INT] [\-y|\-\-ctw\-y=INT]
+[\-t|\-\-threshold=INT] [\-a|\-\-animate\-cursor]
+[\-s|\-\-shutdown] [\-?|\-\-help]
 .SH DESCRIPTION
 .B mousetweaks
 is a daemon that provides various mouse features for the GNOME desktop.
-It depends on Assistve Technology.
+It depends on the Assistive Technology Service Provider Interface (AT-SPI).
 .SH OPTIONS
 .TP
-.B \-e, \-\-enable=STRING
-Enable a mousetweaks feature. Available arguments are: dwell, delay
-.RS
-.IPs DWELL
-Automatically perform mouse clicks without using a physical button
-.IPs DELAY
-Trigger the secondary mouse button when the primary button is held down
-for a specified amount of time 
-.RE
+.B \-\-enable\-dwell
+Automatically perform mouse clicks without using a physical button.
+.TP
+.B \-\-enable\-secondary
+Trigger the secondary mouse button when the primary mouse button is held down
+for a specified amount of time.
+.TP
+.B \-\-dwell\-time=FLOAT
+Time to keep the pointer motionless before a dwell click is performed.
+Range: 0.5 - 3.0 seconds.
+.TP
+.B \-\-secondary\-time=FLOAT
+Time to hold the primary mouse button before a simulated secondary
+click is performed. Range: 0.5 - 3.0 seconds.
 .TP
 .B \-m, \-\-dwell\-mode=STRING
 Select a dwelling mode. Available arguments are: window, gesture
 .RS
 .IPs WINDOW
-Select the active click type from a window or a panel applet
+Select the active click type from a window or a panel applet.
 .IPs GESTURE
 Perform clicks by moving in different directions after the cursor changes
-to a cross
+its shape.
 .RE
 .TP
 .B \-c, \-\-show\-ctw
-Show the click\-type window. Only useful in combination with dwell\-mode window
+Show the click\-type window. Only useful in combination with dwell\-mode=window.
 .TP
 .B \-x, \-\-ctw\-x=INT
-X Position of the click\-type window on screen
+X Position of the click\-type window on screen.
 .TP
 .B \-y, \-\-ctw\-y=INT
-Y Position of the click\-type window on screen
+Y Position of the click\-type window on screen.
+.TP
+.B \-t, \-\-threshold=INT
+Ignore small pointer movements. Range 0 - 30 pixels.
+.TP
+.B \-a, \-\-animate-cursor
+Show elapsed time as cursor overlay.
 .TP
 .B \-s, \-\-shutdown
-Stop the mousetweaks daemon
+Stop the mousetweaks daemon.
 .SH FILES
 .I ~/.mousetweaks.pid
 .RS
