@@ -1,3 +1,8 @@
+2008-05-14 Gerd Kohlberger <gerdk@svn.gnome.org>
+
+	* src/mt-main.c: Add more command-line options.
+	* man/mousetweaks.1: Add new options.
+
 2008-05-12 Francesco Fumanti <frfumanti@svn.gnome.org>
 
 	* configure.ac:
